🚧 Set margin to .global-footer to prevent it from being overlapped by .order-cta

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -4,6 +4,7 @@
 .global-footer {
   padding-top: 32px;
   padding-bottom: 40px;
+  margin-bottom: constants.$order-cta-height;
   background-color: constants.$background;
 
   &-title {
@@ -48,6 +49,8 @@
   }
 
   @include mixins.responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include mixins.text-style(14);
     }
